force-app/main/default/objects/Financial_Account_Balance_Update__e/Financial_Account_Balance_Update__e.object-meta.xml
<CustomObject>
    <label>Financial Account Balance Update</label>
    <pluralLabel>Financial Account Balance Updates</pluralLabel>
</CustomObject>