force-app/main/default/objects/Financial_Account_Balance_Update__e/fields/Financial_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_ID__c</fullName>
    <label>Financial Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>