force-app/main/default/objects/Financial_Account_Balance_Update__e/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>